--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,112 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Marcio Duarte</title>
 </head>
+
 <body>
-    
+    <nav id="side-nav">
+        <div id="div-innavbar">
+            <img id="img-avatar" src="images/my_photo.jpg" alt="Picture not found!">
+              <span>  Affert laboramus repudiandae <br> 
+                 Inciderint efficiantur.</span>
+        </div>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <div id="div-main-container">
+
+        <h2 id="about">About</h2>
+        <p>This sidebar is of full height (100%) and always shown.</p>
+        <p>Scroll down the page to see the result.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+            Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
+            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
+            evertitur
+            eum. <br>
+            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
+            id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
+            Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+            Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
+            Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+
+
+        <h2 id="skills">Skills</h2>
+        <p>This sidebar is of full height (100%) and always shown.</p>
+        <p>Scroll down the page to see the result.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+            Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
+            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
+            evertitur
+            eum. <br>
+            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
+            id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
+            Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+            Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
+            Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+
+
+        <h2 id="education">Education</h2>
+        <p>This sidebar is of full height (100%) and always shown.</p>
+        <p>Scroll down the page to see the result.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+            Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
+            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
+            evertitur
+            eum. <br>
+            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
+            id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
+            Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+            Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
+            Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+
+
+        <h2 id="contact">Contact</h2>
+        <p>This sidebar is of full height (100%) and always shown.</p>
+        <p>Scroll down the page to see the result.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+            Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
+            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
+            evertitur
+            eum. <br>
+            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
+            id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
+            Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+            Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
+            Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+    </div>
+    </div>
 </body>
+
 </html>
