--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Marcio Duarte</title>
+    <link href="https://fonts.googleapis.com/css?family=Amethysta&display=swap" rel="stylesheet"> 
+
 </head>
 
 <body>
     <nav id="side-nav">
         <div id="div-innavbar">
             <img id="img-avatar" src="images/my_photo.jpg" alt="Picture not found!">
-              <span>  Affert laboramus repudiandae <br> 
-                 Inciderint efficiantur.</span>
+              <p id="p-myname">Márcio Duarte</p>
         </div>
         <ul>
             <li><a href="#about">About</a></li>
