--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Marcio Duarte</title>
-    <link href="https://fonts.googleapis.com/css?family=Amethysta&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Amethysta&display=swap" rel="stylesheet">
 
 </head>
 
@@ -15,13 +15,22 @@
     <nav id="side-nav">
         <div id="div-innavbar">
             <img id="img-avatar" src="images/my_photo.jpg" alt="Picture not found!">
-              <p id="p-myname">Márcio Duarte</p>
+            <p id="p-myname">Márcio Duarte</p>
+            <p id="p-career">IT Technician</p>
         </div>
         <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <a href="#about">
+                <li>About</li>
+            </a>
+            <a href="#skills">
+                <li>Skills</li>
+            </a>
+            <a href="#education">
+                <li>Education</li>
+            </a>
+            <a href="#contact">
+                <li>Contact</li>
+            </a>
         </ul>
     </nav>
 
