main pages updated

--- a/index.html
+++ b/index.html
@@ -37,91 +37,100 @@
     <div id="div-main-container">
 
         <h2 id="about">About</h2>
-        <p>This sidebar is of full height (100%) and always shown.</p>
-        <p>Scroll down the page to see the result.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
-            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
-            Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
-            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
-            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
-            evertitur
-            eum. <br>
-            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
-            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
-            id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
-            Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
-            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
-            Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
-            Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
 
+        <div class="div-page">
+
+            <p>This sidebar is of full height (100%) and always shown.</p>
+            <p>Scroll down the page to see the result.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+                illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+                Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
+                Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+                maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
+                evertitur
+                eum. <br>
+                Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+                maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
+                id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
+                Eum no molestiae voluptatibus.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+                illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+                Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
+                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        </div>
 
         <h2 id="skills">Skills</h2>
-        <p>This sidebar is of full height (100%) and always shown.</p>
-        <p>Scroll down the page to see the result.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
-            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
-            Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
-            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
-            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
-            evertitur
-            eum. <br>
-            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
-            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
-            id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
-            Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
-            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
-            Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
-            Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
 
+        <div class="div-page">
+            <p>This sidebar is of full height (100%) and always shown.</p>
+            <p>Scroll down the page to see the result.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+                illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+                Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
+                Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+                maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
+                evertitur
+                eum. <br>
+                Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+                maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
+                id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
+                Eum no molestiae voluptatibus.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+                illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+                Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
+                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        </div>
 
         <h2 id="education">Education</h2>
-        <p>This sidebar is of full height (100%) and always shown.</p>
-        <p>Scroll down the page to see the result.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
-            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
-            Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
-            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
-            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
-            evertitur
-            eum. <br>
-            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
-            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
-            id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
-            Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
-            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
-            Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
-            Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
 
+        <div class="div-page">
 
+            <p>This sidebar is of full height (100%) and always shown.</p>
+            <p>Scroll down the page to see the result.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+                illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+                Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
+                Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+                maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
+                evertitur
+                eum. <br>
+                Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+                maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
+                id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
+                Eum no molestiae voluptatibus.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+                illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+                Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
+                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        </div>
         <h2 id="contact">Contact</h2>
-        <p>This sidebar is of full height (100%) and always shown.</p>
-        <p>Scroll down the page to see the result.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
-            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
-            Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
-            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
-            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
-            evertitur
-            eum. <br>
-            Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
-            maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
-            id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
-            Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
-            illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
-            Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
-            Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <div class="div-page">
+            <p>This sidebar is of full height (100%) and always shown.</p>
+            <p>Scroll down the page to see the result.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+                illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+                Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
+                Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+                maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
+                evertitur
+                eum. <br>
+                Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
+                maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
+                id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
+                Eum no molestiae voluptatibus.</p>
+            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
+                illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
+                Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
+                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        </div>
     </div>
     </div>
 </body>
