--- a/index.html
+++ b/index.html
@@ -64,25 +64,29 @@
         <h2 id="skills">Skills</h2>
 
         <div class="div-page">
-            <p>This sidebar is of full height (100%) and always shown.</p>
-            <p>Scroll down the page to see the result.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
-                illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
-                Atqui causae gloriatur ius te, id agam omnis evertitur eum. <br>
-                Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
-                maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis
-                evertitur
-                eum. <br>
-                Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, <br>
-                maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, <br>
-                id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. <br>
-                Eum no molestiae voluptatibus.</p>
-            <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, <br>
-                illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. <br>
-                Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. <br>
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+
+
+            <ul id="ul-skills">
+                <label for="">Operating systems</label>
+                <hr>
+                <li>Linux System Administration</li>
+                <li>Windows server System Administration</li>
+                <label for="">Programming Languages</label>
+                <hr>
+                <li>C</li>
+                <li>C#</li>
+                <li>Java</li>
+                <li>Python</li>
+                <li>Pearl</li>
+                <li>Bash</li>
+                <label for="">Other skills</label>
+                <hr>
+                <li>Network Administration</li>
+                <li>Virtualization</li>
+                <li>Backup & Recovery Systems</li>
+                <li>IT Support</li>
+                <li>IT Helpdesk</li>
+            </ul>
         </div>
 
         <h2 id="education">Education</h2>
